# FintasTech-YAND-MVSK-Quant-Stock-Portfolio-Analysis

./: LICENSE  Makefile  README.md  package.json  pyproject.toml
apps/api/app/: __init__.py  main.py  schemas.py
apps/web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/tutorial/: page.tsx
apps/web/src/components/: LanguageToggle.tsx
apps/web/src/lib/: i18n.ts
docs/: paper-to-code.md
tests/: test_oracle.py  test_research.py
