[project]
name = "fintastech"
version = "0.1.0"
description = "YAND-MVSK quantitative research platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scipy>=1.12.0",
  "yfinance>=0.2.50",
  "pyarrow>=15.0.0",
  "pydantic>=2.8.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0"
]

[tool.pytest.ini_options]
pythonpath = ["packages/quant_core", "apps/api"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["packages/quant_core", "apps/api"]
include = ["quant_core*", "app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
